tests/baselines/reference/privateNameHashCharName(strict=true).errors.txt
privateNameHashCharName.ts(1,1): error TS1127: Invalid character.
privateNameHashCharName.ts(4,5): error TS1127: Invalid character.
privateNameHashCharName.ts(4,5): error TS7008: Member '#' implicitly has an 'any' type.
privateNameHashCharName.ts(7,14): error TS1127: Invalid character.


==== privateNameHashCharName.ts (4 errors) ====
    #
    ~
!!! error TS1127: Invalid character.
    
    class C {
        #
        ~
!!! error TS1127: Invalid character.
        ~
!!! error TS7008: Member '#' implicitly has an 'any' type.
    
        m() {
            this.#
                 ~
!!! error TS1127: Invalid character.
        }
    }
    